pcapng: NRB IPv4 address is endian swapped but shouldn't be
This issue was migrated from bug 11484 in our old bug tracker.
Original bug information:
Reporter: Hadriel Kaplan
Status: RESOLVED FIXED
Product: Wireshark
Component: Capture file support (libwiretap)
OS: All
Platform: All
Version: 1.99.x (Experimental)
Attachments:
dhcp_big_endian.pcapng: example file with problem - should be "127.0.0.1" but isn't